--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -98,7 +98,7 @@ under the License.
       <div class="content">
         <%= page_content %>
       </div>
-      <div class="dark-box">
+      <div class="dark-box-off">
         <% if language_tabs.any? %>
           <div class="lang-selector">
             <% language_tabs.each do |lang| %>
